--- a/proguard.config
+++ b/proguard.config
@@ -1,3 +1,5 @@
+# This is just a sample file - change for your environment
+
 -verbose
 -injars lib/scala-library.jar(!META-INF/MANIFEST.MF,!library.properties)
 -outjar gen/scandroid.jar
