--- a/proguard.config
+++ b/proguard.config
@@ -1,13 +1,23 @@
 # This is just a sample file - change for your environment
 
+# Turn on verbose, since we depend on proguard writing to stdout for status updates.
 -verbose
+
+# Change to where you keep your scala library
 -injars lib/scala-library.jar(!META-INF/MANIFEST.MF,!library.properties)
+
+# An arbitrary choice; you can put the output whereever you want
 -outjar gen/scandroid.jar
+
+# I split up my output into two different jars, one for scala and one for my own code.
 -injars ../BansheeAndroid/bin
 -injars ../BansheeGeneric/bin
 -outjar gen/banshee.jar
 
 -libraryjars lib/android.jar
+
+# Magic incantations for proguard.  One day I'll actually read the proguard docs and 
+# figure out what I should *really* use.
 
 -dontwarn
 -dontoptimize
@@ -17,4 +27,6 @@
 
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
+
+# I keep all my own code.
 -keep public class com.banshee.** { public protected *; }
