--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/
+               lib/,\
+               lib/guava-10.0.jar
 src.includes = .classpath,\
                .project,\
                .settings/,\
