--- a/build.properties
+++ b/build.properties
@@ -3,15 +3,10 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/,\
-               lib/guava-10.0.jar
-src.includes = .classpath,\
-               .project,\
-               .settings/,\
-               META-INF/,\
-               bin/,\
-               build.properties,\
-               lib/,\
-               plugin.xml,\
-               src/
+               lib/guava-10.0.jar,\
+               lib/proguard.jar
+src.includes = lib/,\
+               README,\
+               docs/,\
+               proguard.config
 jars.compile.order = .
