Integrating jruby dependency checker

--- a/build.properties
+++ b/build.properties
@@ -3,10 +3,13 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/guava-10.0.jar,\
-               lib/proguard.jar
+               lib/proguard.jar,\
+               lib/guava.jar,\
+               lib/jruby.jar,\
+               jruby/
 src.includes = lib/,\
                README,\
                docs/,\
-               proguard.config
+               proguard.config,\
+               jruby/
 jars.compile.order = .
