--- a/build.properties
+++ b/build.properties
@@ -3,10 +3,11 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/proguard.jar,\
-               lib/guava.jar,\
-               lib/jruby.jar,\
-               jruby/
+               jruby/,\
+               lib/asm-3.3.1.jar,\
+               lib/guava-11.0.jar,\
+               lib/jruby-complete-1.6.5.1.jar,\
+               lib/proguard-base-4.6.jar
 src.includes = lib/,\
                README,\
                docs/,\
