--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jruby-complete-1.6.5.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/proguard-base-4.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/proguard-base-4.6.jar" sourcepath="/Users/james/src/proguard4.6"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
