Removed proguard.config

--- a/build.properties
+++ b/build.properties
@@ -11,6 +11,6 @@ bin.includes = plugin.xml,\
 src.includes = lib/,\
                README,\
                docs/,\
-               proguard.config,\
-               jruby/
+               jruby/,\
+               src/
 jars.compile.order = .
