--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/scala"/>
+	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jruby-complete-1.6.5.1.jar"/>
