Export proguard cache config files

--- a/build.properties
+++ b/build.properties
@@ -4,13 +4,16 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                jruby/,\
-               lib/asm-3.3.1.jar,\
-               lib/guava-11.0.jar,\
-               lib/jruby-complete-1.6.5.1.jar,\
-               lib/proguard-base-4.6.jar
+               bin/,\
+               lib/,\
+               proguard_cache/proguard.conf,\
+               proguard_cache/proguard_additions.conf,\
+               proguard_cache/proguard_defaults.conf,\
+               src/main/jruby/
 src.includes = lib/,\
                README,\
                docs/,\
                jruby/,\
                src/
 jars.compile.order = .
+bin.excludes = lib/.DS_Store
