Include source files, license, ivy.xml, and proguard config files

--- a/build.properties
+++ b/build.properties
@@ -9,11 +9,22 @@ bin.includes = plugin.xml,\
                proguard_cache/proguard.conf,\
                proguard_cache/proguard_additions.conf,\
                proguard_cache/proguard_defaults.conf,\
-               src/main/jruby/
+               src/main/jruby/,\
+               LICENSE
 src.includes = lib/,\
                README,\
                docs/,\
                jruby/,\
-               src/
+               src/,\
+               LICENSE,\
+               META-INF/,\
+               build.properties,\
+               ivy.xml,\
+               plugin.xml,\
+               proguard.conf,\
+               proguard_android_scala.config,\
+               proguard_cache/proguard.conf,\
+               proguard_cache/proguard_additions.conf,\
+               proguard_cache/proguard_defaults.conf
 jars.compile.order = .
 bin.excludes = lib/.DS_Store
