Export the proguard configuration files

--- a/build.properties
+++ b/build.properties
@@ -6,11 +6,10 @@ bin.includes = plugin.xml,\
                jruby/,\
                bin/,\
                lib/,\
-               proguard_cache/proguard.conf,\
-               proguard_cache/proguard_additions.conf,\
-               proguard_cache/proguard_defaults.conf,\
                src/main/jruby/,\
-               LICENSE
+               LICENSE,\
+               proguard_cache/,\
+               proguard_cache_conf/
 src.includes = lib/,\
                README,\
                docs/,\
