Removed obsolete files

--- a/build.properties
+++ b/build.properties
@@ -19,11 +19,6 @@ src.includes = lib/,\
                META-INF/,\
                build.properties,\
                ivy.xml,\
-               plugin.xml,\
-               proguard.conf,\
-               proguard_android_scala.config,\
-               proguard_cache/proguard.conf,\
-               proguard_cache/proguard_additions.conf,\
-               proguard_cache/proguard_defaults.conf
+               plugin.xml
 jars.compile.order = .
 bin.excludes = lib/.DS_Store
