Moving common code to AndroidProguardScalaLib

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                src/main/jruby/,\
                LICENSE,\
                proguard_cache/,\
-               proguard_cache_conf/
+               proguard_cache_conf/,\
+               lib_jruby/
 src.includes = lib/,\
                README,\
                docs/,\
