--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry kind="src" path="lib_jruby"/>
+	<classpathentry kind="src" path="lib_scala"/>
 	<classpathentry kind="src" path="src/main/scala"/>
+	<classpathentry kind="src" path="lib_java"/>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.jar"/>
