--- a/.project
+++ b/.project
@@ -43,5 +43,20 @@
 			<type>2</type>
 			<location>/Users/james/.ivy2</location>
 		</link>
+		<link>
+			<name>lib_java</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/AndroidProguardScalaLib/src/main/java</locationURI>
+		</link>
+		<link>
+			<name>lib_jruby</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/AndroidProguardScalaLib/src/main/jruby</locationURI>
+		</link>
+		<link>
+			<name>lib_scala</name>
+			<type>2</type>
+			<locationURI>WORKSPACE_LOC/AndroidProguardScalaLib/src/main/scala</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
