Fixed build properties

--- a/build.properties
+++ b/build.properties
@@ -1,12 +1,10 @@
-source.. = src/main/java, src/main/scala
+source.. = src/main/java, src/main/scala, lib_scala, lib_java, lib_jruby
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               jruby/,\
                bin/,\
                lib/,\
-               src/main/jruby/,\
                LICENSE,\
                proguard_cache/,\
                proguard_cache_conf/,\
@@ -14,12 +12,8 @@ bin.includes = plugin.xml,\
 src.includes = lib/,\
                README,\
                docs/,\
-               jruby/,\
                src/,\
                LICENSE,\
-               META-INF/,\
-               build.properties,\
-               ivy.xml,\
-               plugin.xml
+               ivy.xml
 jars.compile.order = .
 bin.excludes = lib/.DS_Store
