--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="src" path="lib_java"/>
 	<classpathentry exported="true" kind="lib" path="bin/"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.jar" sourcepath="/Users/james/src/guava/guava/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/jruby-complete-1.6.5.1.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
