Checking in now to provide a repro case for a scala compiler bug

--- a/plugin.xml
+++ b/plugin.xml
@@ -37,7 +37,7 @@
                label="Toggle AndroidProguardScala Nature"
                class="com.restphone.androidproguardscala.ToggleNatureAction"
                menubarPath="additions"
-               enablesFor="+"
+               enablesFor="1"
                id="AndroidProguardScala.addRemoveNatureAction">
          </action>
       </objectContribution>
