--- a/build.properties
+++ b/build.properties
@@ -4,16 +4,18 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                bin/,\
-               lib/,\
                LICENSE,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               lib_jruby/
-src.includes = lib/,\
-               README,\
+               lib_jruby/,\
+               lib/,\
+               lib/guava-11.0.1.jar
+src.includes = README,\
                docs/,\
                src/,\
                LICENSE,\
-               ivy.xml
+               ivy.xml,\
+               lib/
 jars.compile.order = .
 bin.excludes = lib/.DS_Store
+src.excludes = lib/.DS_Store
