Switch to verson 26

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-source.. = src/main/java, src/main/scala, lib_scala, lib_java, lib_jruby
+source.. = src/main/java, src/main/scala
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
@@ -15,7 +15,10 @@ src.includes = README,\
                src/,\
                LICENSE,\
                ivy.xml,\
-               lib/
+               lib/,\
+               lib_java/,\
+               lib_jruby/,\
+               lib_scala/
 jars.compile.order = .
 bin.excludes = lib/.DS_Store
 src.excludes = lib/.DS_Store
