Use jarjar to repackage scala-library.jar

--- a/build.properties
+++ b/build.properties
@@ -9,7 +9,8 @@ bin.includes = plugin.xml,\
                proguard_cache_conf/,\
                lib_jruby/,\
                lib/,\
-               lib/guava-11.0.1.jar
+               lib/guava-11.0.1.jar,\
+               lib/scala-library-after-jarjar.jar
 src.includes = README,\
                docs/,\
                src/,\
