--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
@@ -7,6 +8,7 @@
 	<classpathentry kind="src" path="lib_scala"/>
 	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="src" path="lib_java"/>
+	<classpathentry exported="true" kind="lib" path="lib/scala-library-after-jarjar.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/proguard-base-4.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.1.jar"/>
