--- a/.classpath
+++ b/.classpath
@@ -4,15 +4,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" path="lib_jruby"/>
-	<classpathentry kind="src" path="lib_scala"/>
 	<classpathentry kind="src" path="src/main/scala"/>
-	<classpathentry kind="src" path="lib_java"/>
-	<classpathentry exported="true" kind="lib" path="lib/scala-library-after-jarjar.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/asm-3.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/proguard-base-4.6.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-11.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jruby-complete-1.6.5.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="bin" sourcepath="bin"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=AndroidProguardScala&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
