--- a/build.properties
+++ b/build.properties
@@ -8,9 +8,17 @@ bin.includes = plugin.xml,\
                proguard_cache/,\
                proguard_cache_conf/,\
                lib_jruby/,\
-               lib/,\
-               lib/guava-11.0.1.jar,\
-               lib/scala-library-after-jarjar.jar
+               jarjar/asm-jar-asm-4.0.jar,\
+               jarjar/guava-jar-guava-13.0.1.jar,\
+               jarjar/jartender_2.10-jar-jartender_2.10-0.2-SNAPSHOT.jar,\
+               jarjar/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar,\
+               jarjar/jsr305-jar-jsr305-1.3.9.jar,\
+               jarjar/proguard-base-jar-proguard-base-4.8.jar,\
+               jarjar/scala-actors-jar-scala-actors-2.10.0-SNAPSHOT.jar,\
+               jarjar/scala-library-jar-scala-library-2.10.0-SNAPSHOT.jar,\
+               jarjar/scalaz-concurrent_2.10.0-SNAPSHOT-bundle-scalaz-concurrent_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar,\
+               jarjar/scalaz-core_2.10.0-SNAPSHOT-bundle-scalaz-core_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar,\
+               jarjar/scalaz-effect_2.10.0-SNAPSHOT-bundle-scalaz-effect_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar
 src.includes = README,\
                docs/,\
                src/,\
@@ -21,5 +29,4 @@ src.includes = README,\
                lib_jruby/,\
                lib_scala/
 jars.compile.order = .
-bin.excludes = lib/.DS_Store
 src.excludes = lib/.DS_Store
