--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,17 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry exported="true" kind="lib" path="bin" sourcepath="bin"/>
+	<classpathentry kind="lib" path="lib/asm-jar-asm-4.0.jar"/>
+	<classpathentry kind="lib" path="lib/guava-jar-guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jartender_2.10-jar-jartender_2.10-0.2-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jsr305-jar-jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="lib/proguard-base-jar-proguard-base-4.8.jar"/>
+	<classpathentry kind="lib" path="lib/scala-actors-jar-scala-actors-2.10.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/scala-library-jar-scala-library-2.10.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/scalaz-concurrent_2.10.0-SNAPSHOT-bundle-scalaz-concurrent_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/scalaz-core_2.10.0-SNAPSHOT-bundle-scalaz-core_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/scalaz-effect_2.10.0-SNAPSHOT-bundle-scalaz-effect_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar"/>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=AndroidProguardScala&amp;ivyXmlPath=ivy.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
