--- a/build.properties
+++ b/build.properties
@@ -7,26 +7,20 @@ bin.includes = plugin.xml,\
                LICENSE,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               lib_jruby/,\
-               lib/asm-jar-asm-4.0.jar,\
+               lib/androidproguardscalalib_2.10.0-RC3-jar-androidproguardscalalib_2.10.0-RC3-0.1-SNAPSHOT.jar,\
+               lib/asm-jar-asm-4.1.jar,\
                lib/guava-jar-guava-13.0.1.jar,\
-               lib/jartender_2.10-jar-jartender_2.10-0.2-SNAPSHOT.jar,\
+               lib/jartender_2.10.0-RC3-jar-jartender_2.10.0-RC3-0.3-SNAPSHOT.jar,\
                lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar,\
                lib/jsr305-jar-jsr305-1.3.9.jar,\
                lib/proguard-base-jar-proguard-base-4.8.jar,\
-               lib/scala-actors-jar-scala-actors-2.10.0-SNAPSHOT.jar,\
-               lib/scala-library-jar-scala-library-2.10.0-SNAPSHOT.jar,\
-               lib/scalaz-concurrent_2.10.0-SNAPSHOT-bundle-scalaz-concurrent_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar,\
-               lib/scalaz-core_2.10.0-SNAPSHOT-bundle-scalaz-core_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar,\
-               lib/scalaz-effect_2.10.0-SNAPSHOT-bundle-scalaz-effect_2.10.0-SNAPSHOT-7.0-SNAPSHOT.jar
+               lib/scala-actors-jar-scala-actors-2.10.0-RC3.jar,\
+               lib/scala-library-jar-scala-library-2.10.0-RC3.jar,\
+               lib/scalatest_2.10.0-RC3-jar-scalatest_2.10.0-RC3-2.0.M5-B1.jar,\
+               lib/scalaz-core_2.10.0-RC3-bundle-scalaz-core_2.10.0-RC3-7.0.0-M5.jar
 src.includes = README,\
                docs/,\
                src/,\
                LICENSE,\
-               ivy.xml,\
-               lib/,\
-               lib_java/,\
-               lib_jruby/,\
-               lib_scala/
+               ivy.xml
 jars.compile.order = .
-src.excludes = lib/.DS_Store
