--- a/ivy.xml
+++ b/ivy.xml
@@ -1,40 +1,29 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
-  license agreements. See the NOTICE file distributed with this work for additional 
-  information regarding copyright ownership. The ASF licenses this file to 
-  you under the Apache License, Version 2.0 (the "License"); you may not use 
-  this file except in compliance with the License. You may obtain a copy of 
-  the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-  by applicable law or agreed to in writing, software distributed under the 
-  License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-  OF ANY KIND, either express or implied. See the License for the specific 
-  language governing permissions and limitations under the License. -->
-<ivy-module
-  version="2.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
-  <info
-    organisation="com.restphone"
-    module=""
-    status="integration">
-  </info>
-  <dependencies>
-    <dependency
-      org="org.ow2.asm"
-      name="asm"
-      rev="4.0" />
-    <dependency
-      org="net.sf.proguard"
-      name="proguard-base"
-      rev="4.8" />
-    <dependency
-      org="com.google.guava"
-      name="guava"
-      rev="13.0.1" />
-    <dependency
-      org="com.restphone"
-      name="jartender_2.10"
-      rev="0.2-SNAPSHOT" />
-    </dependencies>
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	you under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+<ivy-module version="2.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:noNamespaceSchemaLocation="http://ant.apache.org/ivy/schemas/ivy.xsd">
+	<info organisation="com.restphone" module="" status="integration">
+	</info>
+	<dependencies>
+		<dependency org="org.ow2.asm" name="asm" rev="4.1" />
+		<dependency org="net.sf.proguard" name="proguard-base" rev="4.8" />
+		<dependency org="com.google.guava" name="guava" rev="13.0.1" />
+		<dependency org="com.restphone" name="jartender_2.10.0-RC3"
+			rev="latest.snapshot" />
+		<dependency org="com.restphone" name="androidproguardscalalib_2.10.0-RC3"
+			rev="latest.snapshot" />
+		<dependency org="org.scalaz" name="scalaz-core_2.10.0-RC3"
+			rev="latest.milestone" />
+	</dependencies>
 </ivy-module>
 
