eclipse .project changes

--- a/.project
+++ b/.project
@@ -42,7 +42,7 @@
 		<link>
 			<name>.ivy2</name>
 			<type>2</type>
-			<location>C:/Users/james/.ivy2</location>
+			<location>/Users/james/eclipseIndigo/Eclipse.app/Contents/MacOS/C::/Users/james/.ivy2</location>
 		</link>
 	</linkedResources>
 </projectDescription>
