--- a/ivy.xml
+++ b/ivy.xml
@@ -24,6 +24,6 @@
 			rev="latest.snapshot" />
 		<dependency org="org.scalaz" name="scalaz-core_2.10.0-RC3"
 			rev="latest.milestone" />
+		<dependency org="com.googlecode.jarjar" name="jarjar" rev="1.3" />
 	</dependencies>
 </ivy-module>
-
