--- a/.classpath
+++ b/.classpath
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry exported="true" kind="lib" path="bin" sourcepath="bin"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/scala"/>
-	<classpathentry exported="true" kind="lib" path="bin" sourcepath=""/>
-	<classpathentry kind="lib" path="lib/androidproguardscalalib_2.10.0-RC3-jar-androidproguardscalalib_2.10.0-RC3-0.1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/asm-jar-asm-4.1.jar"/>
-	<classpathentry kind="lib" path="lib/guava-jar-guava-13.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/jartender_2.10.0-RC3-jar-jartender_2.10.0-RC3-0.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/jsr305-jar-jsr305-1.3.9.jar"/>
-	<classpathentry kind="lib" path="lib/proguard-base-jar-proguard-base-4.8.jar"/>
-	<classpathentry kind="lib" path="lib/scala-actors-jar-scala-actors-2.10.0-RC3.jar"/>
-	<classpathentry kind="lib" path="lib/scala-library-jar-scala-library-2.10.0-RC3.jar"/>
-	<classpathentry kind="lib" path="lib/scalatest_2.10.0-RC3-jar-scalatest_2.10.0-RC3-2.0.M5-B1.jar"/>
-	<classpathentry kind="lib" path="lib/scalaz-core_2.10.0-RC3-bundle-scalaz-core_2.10.0-RC3-7.0.0-M5.jar"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/androidproguardscalalib_2.10.0-RC3-jar-androidproguardscalalib_2.10.0-RC3-0.1-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/asm-jar-asm-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/guava-jar-guava-13.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/jartender_2.10.0-RC3-jar-jartender_2.10.0-RC3-0.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/jsr305-jar-jsr305-1.3.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/proguard-base-jar-proguard-base-4.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/scala-actors-jar-scala-actors-2.10.0-RC3.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/scala-library-jar-scala-library-2.10.0-RC3.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/scalatest_2.10.0-RC3-jar-scalatest_2.10.0-RC3-2.0.M5-B1.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/scalaz-core_2.10.0-RC3-bundle-scalaz-core_2.10.0-RC3-7.0.0-M5.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
