--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry exported="true" kind="lib" path="jarjar/androidproguardscalalib_2.10.0-RC3-jar-androidproguardscalalib_2.10.0-RC3-0.1-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/asm-jar-asm-4.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/guava-jar-guava-13.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="jarjar/jartender_2.10.0-RC3-jar-jartender_2.10.0-RC3-0.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="jarjar/jartender_2.10.0-RC3-jar-jartender_2.10.0-RC3-0.3-SNAPSHOT.jar" sourcepath="/Jartender"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.3-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/jsr305-jar-jsr305-1.3.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/proguard-base-jar-proguard-base-4.8.jar"/>
@@ -17,5 +17,5 @@
 	<classpathentry exported="true" kind="lib" path="jarjar/scala-library-jar-scala-library-2.10.0-RC3.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/scalatest_2.10.0-RC3-jar-scalatest_2.10.0-RC3-2.0.M5-B1.jar"/>
 	<classpathentry exported="true" kind="lib" path="jarjar/scalaz-core_2.10.0-RC3-bundle-scalaz-core_2.10.0-RC3-7.0.0-M5.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
