--- a/ivy.xml
+++ b/ivy.xml
@@ -18,12 +18,8 @@
 		<dependency org="org.ow2.asm" name="asm" rev="4.1" />
 		<dependency org="net.sf.proguard" name="proguard-base" rev="4.8" />
 		<dependency org="com.google.guava" name="guava" rev="13.0.1" />
-		<dependency org="com.restphone" name="jartender_2.10.0-RC3"
-			rev="latest.snapshot" />
-		<dependency org="com.restphone" name="androidproguardscalalib_2.10.0-RC3"
-			rev="latest.snapshot" />
-		<dependency org="org.scalaz" name="scalaz-core_2.10.0-RC3"
-			rev="latest.milestone" />
+		<dependency org="com.restphone" name="androidproguardscalalib_2.10"
+			rev="0.4-SNAPSHOT" />
 		<dependency org="com.googlecode.jarjar" name="jarjar" rev="1.3" />
 	</dependencies>
 </ivy-module>
