--- a/proguard_cache_conf/proguard_defaults.conf
+++ b/proguard_cache_conf/proguard_defaults.conf
@@ -11,5 +11,11 @@
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 
--keep public class scala.ScalaObject
+-keep public class scala.ScalaObject {;}
 -keep public class scala.Function0, scala.Function1
+
+# Fix for https://issues.scala-lang.org/browse/SI-5397 
+
+-keep class scala.collection.SeqLike {
+    public protected *;
+}
