--- a/proguard_cache_conf/proguard_additions.conf
+++ b/proguard_cache_conf/proguard_additions.conf
@@ -1,1 +1,5 @@
-# Nothing
+# Fix for https://issues.scala-lang.org/browse/SI-5397 
+
+-keep class scala.collection.SeqLike {
+    public protected *;
+}
