Changed proguard defaults

--- a/proguard_cache_conf/proguard_defaults.conf
+++ b/proguard_cache_conf/proguard_defaults.conf
@@ -7,11 +7,12 @@
 -dontskipnonpubliclibraryclassmembers
 
 -ignorewarnings
+-forceprocessing
 
 -keepattributes Exceptions,InnerClasses,Signature,Deprecated,
                 SourceFile,LineNumberTable,*Annotation*,EnclosingMethod
 
--keep public class scala.ScalaObject {;}
+-keep public class scala.ScalaObject { *; }
 -keep public class scala.Function0, scala.Function1
 
 # Fix for https://issues.scala-lang.org/browse/SI-5397 
