--- a/build.properties
+++ b/build.properties
@@ -7,17 +7,16 @@ bin.includes = plugin.xml,\
                LICENSE,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               jarjar/androidproguardscalalib_2.10-jar-androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
-               jarjar/asm-jar-asm-4.1.jar,\
-               jarjar/guava-jar-guava-13.0.1.jar,\
-               jarjar/jarjar-jar-jarjar-1.3.jar,\
-               jarjar/jartender_2.10-jar-jartender_2.10-0.4-SNAPSHOT.jar,\
-               jarjar/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.4-SNAPSHOT.jar,\
-               jarjar/jsr305-jar-jsr305-1.3.9.jar,\
-               jarjar/proguard-base-jar-proguard-base-4.8.jar,\
-               jarjar/scala-actors-jar-scala-actors-2.10.0.jar,\
-               jarjar/scala-library-jar-scala-library-2.10.0.jar,\
-               jarjar/scalaz-core_2.10-bundle-scalaz-core_2.10-7.0.0-M7.jar
+               lib/androidproguardscalalib_2.10-jar-androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
+               lib/asm-jar-asm-4.1.jar,\
+               lib/guava-jar-guava-13.0.1.jar,\
+               lib/jartender_2.10-jar-jartender_2.10-0.4-SNAPSHOT.jar,\
+               lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.4-SNAPSHOT.jar,\
+               lib/jsr305-jar-jsr305-1.3.9.jar,\
+               lib/proguard-base-jar-proguard-base-4.8.jar,\
+               lib/scala-actors-jar-scala-actors-2.10.0.jar,\
+               lib/scala-library-jar-scala-library-2.10.0.jar,\
+               lib/scalaz-core_2.10-bundle-scalaz-core_2.10-7.0.0-M7.jar
 src.includes = README,\
                docs/,\
                src/,\
