README is now README.md

--- a/build.properties
+++ b/build.properties
@@ -17,7 +17,7 @@ bin.includes = plugin.xml,\
                lib/scala-actors-jar-scala-actors-2.10.0.jar,\
                lib/scala-library-jar-scala-library-2.10.0.jar,\
                lib/scalaz-core_2.10-bundle-scalaz-core_2.10-7.0.0-M7.jar
-src.includes = README,\
+src.includes = README.md,\
                docs/,\
                src/,\
                LICENSE,\
