--- a/pom.xml
+++ b/pom.xml
@@ -68,16 +68,10 @@
     <relativePath>..\com.restphone.androidproguardscala.parent</relativePath>
   </parent>
   <dependencies>
-
-    <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>2.10.0</version>
-    </dependency>
     <dependency>
       <groupId>com.restphone</groupId>
-      <artifactId>androidproguardscalalib_2.10.0-RC3</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <artifactId>androidproguardscalalib_2.10</artifactId>
+      <version>0.4-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
