--- a/pom.xml
+++ b/pom.xml
@@ -95,4 +95,4 @@
   <issueManagement>
     <url>https://github.com/banshee/AndroidProguardScala/issues</url>
   </issueManagement>
-</project>
+<version>0.0.48-SNAPSHOT</version></project>
