Use COPYING, not LICENSE Use target/classes

--- a/com.restphone.androidproguardscala.plugin/build.properties
+++ b/com.restphone.androidproguardscala.plugin/build.properties
@@ -3,8 +3,8 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               bin/,\
-               LICENSE,\
+               target/classes/,\
+               COPYING,\
                proguard_cache/,\
                proguard_cache_conf/,\
                lib/androidproguardscalalib_2.10-jar-androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
@@ -20,6 +20,6 @@ bin.includes = plugin.xml,\
 src.includes = README.md,\
                docs/,\
                src/,\
-               LICENSE,\
+               COPYING,\
                ivy.xml
 jars.compile.order = .
