Changed project name in Eclipse

--- a/com.restphone.androidproguardscala.plugin/.project
+++ b/com.restphone.androidproguardscala.plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AndroidProguardScala</name>
+	<name>com.restphone.androidproguardscala.plugin</name>
 	<comment></comment>
 	<projects>
 	</projects>
