--- a/com.restphone.androidproguardscala.plugin/pom.xml
+++ b/com.restphone.androidproguardscala.plugin/pom.xml
@@ -94,5 +94,53 @@
   <issueManagement>
     <url>https://github.com/banshee/AndroidProguardScala/issues</url>
   </issueManagement>
-  <version>0.0.47-SNAPSHOT</version>
+  <version>0.0.48-SNAPSHOT</version>
+  <profiles>
+    <profile>
+      <!-- pull the data needed to add the version numbers to the manifests -->
+      <id>set-versions</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.scala-ide</groupId>
+          <artifactId>build-tools_2.9.2</artifactId>
+          <version>0.2.0</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <executions>
+              <execution>
+                <id>set-versions</id>
+                <goals>
+                  <goal>java</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <classpathScope>compile</classpathScope>
+              <mainClass>org.scalaide.buildtools.UpdateAddonManifests</mainClass>
+              <arguments>
+                <argument>${repo.scala-ide}</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <repositories>
+        <repository>
+          <!-- extra repository containing the build package -->
+          <id>typesafe-ide</id>
+          <name>Typesafe IDE repository</name>
+          <url>http://repo.typesafe.com/typesafe/ide-2.9</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+  </profiles>
 </project>
